generated/k8s/60-security/network-policies-dev.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: aia-dev-default-deny-ingress
  namespace: aia-dev
spec:
  podSelector: {}
  policyTypes:
    - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: aia-dev-allow-same-project
  namespace: aia-dev
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              app.kubernetes.io/part-of: aia-hiring-dev
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: aia-dev-storage-default-deny-ingress
  namespace: aia-dev-storage
spec:
  podSelector: {}
  policyTypes:
    - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: aia-dev-allow-minio-from-project
  namespace: aia-dev-storage
spec:
  podSelector:
    matchLabels:
      app: minio-dev
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              app.kubernetes.io/part-of: aia-hiring-dev
      ports:
        - protocol: TCP
          port: 9000
        - protocol: TCP
          port: 9001
